2018/codemotion/cnd/demo/manifests/vote-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: vote
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
      - image: pchico83/codemotion
        name: vote
