2018/codemotion/cnd/demo/manifests/result-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: result
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
      - result.dev.okteto.net
      secretName: result-letsencrypt
  rules:
  - host: result.dev.okteto.net
    http:
      paths:
      - path: /
        backend:
          serviceName: result
          servicePort: 80
