2018/codemotion/cnd/demo/manifests/vote-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vote
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
      - vote.dev.okteto.net
      secretName: vote-letsencrypt
  rules:
  - host: vote.dev.okteto.net
    http:
      paths:
      - path: /
        backend:
          serviceName: vote
          servicePort: 80
